--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Build PlatformIO Project
         run: pio run
 
+      - name: Test PlatformIO Project
+        run: pio test
+
       - name: Store Artifacts
         uses: actions/upload-artifact@v2
         with:
