--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         run: pio run
 
       - name: Test PlatformIO Project
-        run: pio test
+        run: pio remote  test
 
       - name: Store Artifacts
         uses: actions/upload-artifact@v2
