--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Build PlatformIO Project
         run: pio run
 
-      - name: Test PlatformIO Project
-        run: pio remote  test
+      # - name: Test PlatformIO Project
+      #   run: pio remote  test
 
       - name: Store Artifacts
         uses: actions/upload-artifact@v2
